[package]
name = "undulate"
version = "0.1.0"
edition = "2021"
authors = ["Jonathan King <jonathan.king@hopin.to>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.2.7", features = ["derive"] }
hound = "3.5.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
